@@ -1,11 +1,14 @@
 Package: R2jags
-Version: 0.01-26
-Date: 2009-10-12
+Version: 0.01-27
+Date: 2009-11-9
 Title: A Package for Running jags from R
-Author: Yu-Sung Su <ys463@columbia.edu>,
-        Masanao Yajima <yajima@stat.columbia.edu>,
+Author: Yu-Sung Su <ys463@columbia.edu>, Masanao Yajima
+        <yajima@stat.columbia.edu>,
 Maintainer: Yu-Sung Su <ys463@columbia.edu>
 Depends: methods, R(>= 2.7.0), coda, R2WinBUGS, rjags(>= 1.0.3-8)
 SystemRequirements: jags (>= 1.0.3)
 Description: Using this package to call jags from R.
 License: GPL (>= 2)
+Packaged: 2009-11-11 18:20:27 UTC; yusung
+Repository: CRAN
+Date/Publication: 2009-11-12 11:36:57
