@@ -33,7 +33,7 @@ jags2(data, inits, parameters.to.save, model.file="model.bug",
 
 \arguments{
   \item{data}{a vector or list of the names of the data objects used by
-    the model.}
+    the model, or a list of the data objects themselves.}
   \item{inits}{a list with \code{n.chains} elements; each element of the
     list is itself a list of starting values for the \code{BUGS} model,
     \emph{or} a function creating (possibly random) initial values. If inits is 
@@ -181,7 +181,8 @@ jags2(data, inits, parameters.to.save, model.file="model.bug",
   ## also you need write access in the working directory:
   ## currently works only under Windows OS
   ## e.g. setwd("c:/")
-  
+
+  ## NOT RUN HERE
   #jagsfit <- jags2(data=jags.data, inits=jags.inits, jags.params, 
   #  n.iter=5000, model.file=model.file)
   #print(jagsfit)
